client/vite-project/src/components/search/Search.module.scss
.search__form {
    display: flex;
    flex-direction: column;
    margin: 4rem 0;
}

.input__wrapper {
    display: flex; 
    justify-content: end;  
}

.search__label {
    color: rgb(22, 22, 22);
    font-size: .8rem;
    font-weight: 350;
    align-self: end;
    padding-right: .3rem;
    padding-bottom: .3rem;
}

.search__input {
    border-radius: 1rem;
    padding: .3rem 1.7rem .3rem .6rem;
    outline: none;
    border: 1px solid lightblue;

    &::placeholder {
        font-size: .9rem;
        color: rgb(167, 167, 167);
    }

    &:focus {
        border: 1px solid rgb(12, 161, 62);
    }
}

.search__button {
    border: none;
    background-color: rgb(218, 238, 255);
    color: rgb(20, 20, 20);
    border-radius: .5rem;
    padding: .5rem 2rem;
    font-weight: 500;
    font-size: .8rem;
    cursor: pointer;
    align-self: center;

    &:hover {
        background-color: rgb(153, 207, 252);
    }
}

.clear__icon {
    all: unset;
    position: absolute;
    align-self: center;
    padding-right: .5rem;
    cursor: pointer;
}

